--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,19 +2,24 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 */12 * * *"   # 2x par jour
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Generate Snake
+        uses: Platane/snk@v3
         with:
           github_user_name: AhmedAmineBejaoui
           outputs: |
             dist/github-contribution-grid-snake.svg
-      - name: Push snake
+
+      - name: Push snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
